Fix builds breaking due to extensions importing client-side code

--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -27,6 +27,9 @@
             "client-shared/*": [
                 "src/client-shared/*"
             ],
+            "shared/*": [
+                "src/shared/*"
+            ],
             "components/*": [
                 "src/graphics/components/*"
             ]
