--- a/tsconfig.extension.json
+++ b/tsconfig.extension.json
@@ -14,6 +14,9 @@
         "paths": {
             "types/*": [
                 "src/types/*"
+            ],
+            "shared/*": [
+                "src/shared/*"
             ]
         },
         "outDir": "extension",
