Allow creating multiple independent game layout instances
Each of these instances has a separate layout and capture assignments

--- a/schemas/obsConfig.json
+++ b/schemas/obsConfig.json
@@ -4,9 +4,15 @@
     "additionalProperties": false,
     "properties": {
         "videoInputsScene": { "type": "string" },
-        "gameLayoutVideoFeedsScene": { "type": "string" },
+        "gameLayoutVideoFeedScenes": {
+            "type": "array",
+            "items": { "type": ["string", "null"] }
+        },
         "gameplayScene": { "type": "string" },
         "intermissionScene": { "type": "string" }
     },
-    "default": {}
+    "required": ["gameLayoutVideoFeedScenes"],
+    "default": {
+        "gameLayoutVideoFeedScenes": [null, null, null]
+    }
 }
