Allow re-assigning player nameplates
One nameplate now isn't fully "owned" by a single team, and can instead
contain a mix of players from any team.

--- a/schemas/playerNameplateAssignments.json
+++ b/schemas/playerNameplateAssignments.json
@@ -14,13 +14,20 @@
                     "type": "object",
                     "additionalProperties": false,
                     "properties": {
-                        "teamId": { "type": "string" },
-                        "playerIds": {
+                        "players": {
                             "type": "array",
-                            "items": { "type": "string" }
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": false,
+                                "properties": {
+                                    "teamId": { "type": "string" },
+                                    "talentId": { "type": "string" }
+                                },
+                                "required": ["teamId", "talentId"]
+                            }
                         }
                     },
-                    "required": ["playerIds"]
+                    "required": ["players"]
                 }
             }
         },
