Allow defining the gameplay scene for all game layout feeds

--- a/schemas/obsConfig.json
+++ b/schemas/obsConfig.json
@@ -8,11 +8,15 @@
             "type": "array",
             "items": { "type": ["string", "null"] }
         },
-        "gameplayScene": { "type": "string" },
+        "gameplayScenes": {
+            "type": "array",
+            "items": { "type": ["string", "null"] }
+        },
         "intermissionScene": { "type": "string" }
     },
-    "required": ["gameLayoutVideoFeedScenes"],
+    "required": ["gameLayoutVideoFeedScenes", "gameplayScenes"],
     "default": {
-        "gameLayoutVideoFeedScenes": [null, null, null]
+        "gameLayoutVideoFeedScenes": [null, null, null],
+        "gameplayScenes": [null, null, null]
     }
 }
