--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
         "@fortawesome/free-brands-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.0-4",
-        "@iplsplatoon/vue-components": "3.7.0",
+        "@iplsplatoon/vue-components": "3.9.0",
         "@jest/globals": "^29.7.0",
         "@nodecg/types": "^2.1.12",
         "@types/cookie": "^0.6.0",
@@ -149,6 +149,7 @@
         "vuedraggable": "^4.1.0"
     },
     "dependencies": {
+        "@floating-ui/vue": "^1.1.9",
         "axios": "^1.6.8",
         "axios-retry": "^4.5.0",
         "cookie": "^0.6.0",
