--- a/package.json
+++ b/package.json
@@ -96,6 +96,11 @@
                 "file": "countdown.html",
                 "width": 1920,
                 "height": 1080
+            },
+            {
+                "file": "utility-stage-display.html",
+                "width": 1920,
+                "height": 1080
             }
         ],
         "assetCategories": [
